# qrcode-agent-cli

./: .gitignore  .releaserc.json  Cargo.toml  README.md  SKILL.md  package-lock.json  package.json
.github/actions/setup-build-env/: action.yml
.github/workflows/: release.yml
release/: skill-release.config.json
scripts/: install-current-release.sh
scripts/release/: build-cli-artifact.mjs  build-release-artifacts.mjs  publish-npm-packages.mjs  publish-skill-to-target-repo.mjs  release-helpers.mjs  run-quality-gates.mjs  run-semantic-release.mjs  verify-release-config.mjs
src/: context.rs  help.rs  lib.rs  main.rs
templates/: release-support.md
tests/: cli_test.rs
